Test "clickable" image in a figure and fix LaTeX writer.
Add a "target" option to a "figure" directive in the standard.rst
functional test file to test handling and validation of an `<image>` wrapped
in a `<reference>` in a `<figure>`.

Fix the LaTeX writer's handling of images nested in a `<reference>`:

* Default to center-aligned images in a figure also if it is "clickable".
* Fix newlines in output of visit_image() and visit_reference().
* Add test cases to the LaTeX writer test.

git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@10085 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/test/functional/expected/standalone_rst_html5.html
+++ b/docutils/test/functional/expected/standalone_rst_html5.html
@@ -614,7 +614,9 @@ An image occupying 50% of the line width:</p>
 media, figures might float to a different position if this helps the page
 layout.</p>
 <figure class="figclass1 figclass2">
+<a class="reference external image-reference" href="https://docutils.sourceforge.io/rst.html">
 <img alt="reStructuredText, the markup syntax" class="class1 class2" src="../../../docs/user/rst/images/title.png" width="258" />
+</a>
 <figcaption>
 <p>Plaintext markup syntax and parser system.</p>
 <div class="legend">
