--- a/docutils/test/functional/expected/standalone_rst_html4css1.html
+++ b/docutils/test/functional/expected/standalone_rst_html4css1.html
@@ -617,7 +617,9 @@ An image occupying 50% of the line width:</p>
 media, figures might float to a different position if this helps the page
 layout.</p>
 <div class="figclass1 figclass2 figure">
+<a class="reference external image-reference" href="https://docutils.sourceforge.io/rst.html">
 <img alt="reStructuredText, the markup syntax" class="class1 class2" src="../../../docs/user/rst/images/title.png" style="width: 258px;" />
+</a>
 <p class="caption">Plaintext markup syntax and parser system.</p>
 <div class="legend">
 <table border="1" class="docutils">
